- fix for JDK6 issue - plugin.xml - readme updated